--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                         <p class="text-black-50 mb-0">
                             I transitioned into software development after five years in elementary education
                             where I gained valuable skills in teaching, communication, organization, management, and so
-                            much more. My passion for education and psychology has led to a love of front-end
+                            much more. My passion for education, psychology, and technology has led to a love of
+                            front-end
                             programming because it allows me to
                             focus on improving the user experience and finding ways to positively impact the lives of
                             others. I
@@ -143,21 +144,21 @@
                     </div>
                 </div>
             </div>
-            <!-- Project One Row-->
+            <!-- Projects-->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center" id="projects">
                 <h1 class="col-6 text-center">Featured Applications</h1>
             </div>
+            <!-- Project Keepr -->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid h-100" src="assets/img/DailyRhythm2.PNG" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid h-100" src="assets/img/KeeprHome.PNG" alt="..." /></div>
                 <div class="col-lg-6">
                     <div class="bg-black h-100">
                         <div class="d-flex">
                             <div class="project-text w-100 my-auto text-lg-left">
-                                <h4 class="text-white text-center">Daily Rhythm</h4>
-                                <p class="text-white-50">A full-stack habit tracking app where users set
-                                    long term goals that can be broken down by daily "rhythms" and
-                                    "beats". Built using a Vue.js front-end, a
-                                    Node.js back-end, and a MongoDB database.</p>
+                                <h4 class="text-white text-center">Keepr</h4>
+                                <p class="text-white-50">A full-stack application similar to Pinterest where users
+                                    can share images and keep them in "vaults". Built using a Vue.js front-end, a
+                                    C# and .Net back-end, and a MySQL database.</p>
                                 <p class="text-white-50 text-center">Live site coming soon!</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
@@ -168,17 +169,20 @@
             <!-- Project Two Row-->
             <div class="row mb-5 mb-lg-0 gx-0 justify-content-center">
                 <div class="col-lg-6">
-                    <img class="img-fluid h-100" src="assets/img/KeeprHome.PNG" alt="..." />
+                    <a href="https://gatherwise.jordanldiaz.us/#/" target="_blank">
+                        <img class="img-fluid h-100" src="assets/img/gatherwise.PNG" alt="..." />
+                    </a>
                 </div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-lg-right">
-                                <h4 class="text-white text-center">Keepr</h4>
-                                <p class="text-white-50">A full-stack application similar to Pinterest where users
-                                    can share images and keep them in "vaults". Built using a Vue.js front-end, a
-                                    C# and .Net back-end, and a MySQL database.</p>
-                                <p class="text-white-50 text-center">Live site coming soon!</p>
+                                <h4 class="text-white text-center">g a t h e r w i s e</h4>
+                                <p class="text-white-50">A full-stack application where users can create event
+                                    listings and snag tickets for those events. Users can also leave comments for
+                                    events! Built using a Vue.js front-end and a
+                                    Node.js back-end.</p>
+                                <p class="text-white-50 text-center">Click the image to checkout the live site!</p>
                                 <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
@@ -207,20 +211,17 @@
             <!-- Project Four Row-->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                 <div class="col-lg-6">
-                    <!-- <a href="" target="_blank"> -->
-                    <img class="img-fluid h-100" src="assets/img/gatherwise.PNG" alt="Check out gatherwise!" />
-                    <!-- </a> -->
+                    <img class="img-fluid h-100" src="assets/img/DailyRhythm2.PNG" alt="Check out gatherwise!" />
                 </div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-lg-right">
-                                <h4 class="text-white text-center">g a t h e r w i s e</h4>
-                                <p class="text-white-50">A full-stack application where users can create event
-                                    listings and snag tickets for those events. Users can also leave comments for
-                                    events! Built using a Vue.js front-end and a
-                                    Node.js back-end.</p>
-                                <p class="text-white-50 text-center">Live site coming soon!</p>
+                                <h4 class="text-white text-center">Daily Rhythm</h4>
+                                <p class="text-white-50">A full-stack habit tracking app where users set
+                                    long term goals that can be broken down by daily "rhythms" and
+                                    "beats". Built using a Vue.js front-end, a
+                                    Node.js back-end, and a MongoDB database.</p>
                                 <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
