--- a/index.html
+++ b/index.html
@@ -277,7 +277,9 @@
                             <i class="fas fa-envelope text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50"><a href="#!">jordanldiaz29@gmail.com</a></div>
+                            <div class="small text-black-50">
+                                <p>jordanldiaz29@gmail.com</p>
+                            </div>
                         </div>
                     </div>
                 </div>
