--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="col-xl-6 col-lg-5">
                     <div class="featured-text text-lg-left">
                         <h4><b>About Me</b></h4>
-                        <h5>Hello! I'm Jordan Diaz</h5>
+                        <h5>Hello 👋🏼 I'm Jordan Diaz!</h5>
                         <p class="text-black-50 mb-0">I am a software developer with a passion for utilizing technology
                             for positive social impact and an educator with a love of growth mindset and doing hard
                             things. </p>
