added keepr link

--- a/index.html
+++ b/index.html
@@ -150,7 +150,11 @@
             </div>
             <!-- Project Keepr -->
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid h-100" src="assets/img/KeeprHome.PNG" alt="..." /></div>
+                <div class="col-lg-6">
+                    <a href="https://keepr.jordanldiaz.us/#/" target="_blank">
+                        <img class="img-fluid h-100" src="assets/img/KeeprHome.PNG" alt="View project" />
+                    </a>
+                </div>
                 <div class="col-lg-6">
                     <div class="bg-black h-100">
                         <div class="d-flex">
@@ -170,7 +174,7 @@
             <div class="row mb-5 mb-lg-0 gx-0 justify-content-center">
                 <div class="col-lg-6">
                     <a href="https://gatherwise.jordanldiaz.us/#/" target="_blank">
-                        <img class="img-fluid h-100" src="assets/img/gatherwise.PNG" alt="..." />
+                        <img class="img-fluid h-100" src="assets/img/gatherwise.PNG" alt="View Project" />
                     </a>
                 </div>
                 <div class="col-lg-6 order-lg-first">
