--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                 <p class="text-white-50">A full-stack application similar to Pinterest where users
                                     can share images and keep them in "vaults". Built using a Vue.js front-end, a
                                     C# and .Net back-end, and a MySQL database.</p>
-                                <p class="text-white-50 text-center">Live site coming soon!</p>
+                                <p class="text-white-50 text-center">Click the image to checkout the live site!</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
